--- a/web-app/src/index.html
+++ b/web-app/src/index.html
@@ -1,12 +1,14 @@
 <html>
-<script type="module" src="App.js"></script>
-<script type="module">
-    import { veep } from './App.js';
-    veep("herpy do!")();
-</script>
-
-<body>
-    see the console, friend.
-</body>
+    <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    </head>
+    
+    <body>
+        <div id="app">The UI is not here yet</div>
+        <script type="module">
+                    import { main } from './App.js'
+                    main();
+                </script>
+        </body>
 
 </html>
