--- a/web-app/src/index.html
+++ b/web-app/src/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     </head>
     
-    <body>
+    <body class="p-4">
         <div id="app">The UI is not here yet</div>
         <script type="module">
                     import { main } from './App.js'
